; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/atm/extr_clip.c_idle_timer_check.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/atm/extr_clip.c_idle_timer_check.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@clip_tbl = common dso_local global %struct.TYPE_3__ zeroinitializer, align 4
@neigh_check_cb = common dso_local global i32 0, align 4
@idle_timer = common dso_local global i32 0, align 4
@jiffies = common dso_local global i64 0, align 8
@CLIP_CHECK_INTERVAL = common dso_local global i32 0, align 4
@HZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @idle_timer_check to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @idle_timer_check(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = call i32 @write_lock(i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @clip_tbl, i32 0, i32 0))
  %4 = load i32, i32* @neigh_check_cb, align 4
  %5 = call i32 @__neigh_for_each_release(%struct.TYPE_3__* @clip_tbl, i32 %4)
  %6 = load i64, i64* @jiffies, align 8
  %7 = load i32, i32* @CLIP_CHECK_INTERVAL, align 4
  %8 = load i32, i32* @HZ, align 4
  %9 = mul nsw i32 %7, %8
  %10 = sext i32 %9 to i64
  %11 = add nsw i64 %6, %10
  %12 = call i32 @mod_timer(i32* @idle_timer, i64 %11)
  %13 = call i32 @write_unlock(i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @clip_tbl, i32 0, i32 0))
  ret void
}

declare dso_local i32 @write_lock(i32*) #1

declare dso_local i32 @__neigh_for_each_release(%struct.TYPE_3__*, i32) #1

declare dso_local i32 @mod_timer(i32*, i64) #1

declare dso_local i32 @write_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
